--- a/owncloudApp/src/main/res/layout/edit_share_layout.xml
+++ b/owncloudApp/src/main/res/layout/edit_share_layout.xml
@@ -23,7 +23,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.ui.sharing.fragments.EditShareFragment"
+    tools:context=".presentation.ui.sharing.fragments.EditPrivateShareFragment"
     >
 
     <LinearLayout
