--- a/owncloudApp/src/main/res/layout/edit_share_layout.xml
+++ b/owncloudApp/src/main/res/layout/edit_share_layout.xml
@@ -45,7 +45,7 @@
         <!-- for some reason the divider below is determining the width for the fragment;
              so, leave it there, even if it's height is 0dp, we don't really want to see it -->
         <View
-            android:id="@+id/share_header_divider"
+            android:id="@+id/shareHeaderDivider"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/owncloud_blue"
