--- a/owncloudApp/src/main/res/values/setup.xml
+++ b/owncloudApp/src/main/res/values/setup.xml
@@ -77,6 +77,9 @@
     <string name="url_app_download" formatted="false">"https://play.google.com/store/apps/details?id=com.owncloud.android"</string>
     <string name="url_sync_calendar_contacts">"https://play.google.com/store/apps/details?id=at.bitfire.davdroid"</string>
 
+    <!--Destination mail for sending log files -->
+    <string name="mail_logger" formatted="false"></string>
+
     <!-- OAuth2 -->
 
     <!-- constants that must be respected by the authorization server; if changed, the app must be rebuild -->
