--- a/owncloudApp/src/main/res/layout-h620dp/drawer.xml
+++ b/owncloudApp/src/main/res/layout-h620dp/drawer.xml
@@ -27,7 +27,16 @@
         app:headerLayout="@layout/drawer_header"
         app:menu="@menu/drawer_menu">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/drawer_logo"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:scaleType="centerInside"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/standard_margin"
+            android:paddingBottom="50dp"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -35,19 +44,11 @@
             android:orientation="vertical"
             android:padding="@dimen/standard_padding">
 
-            <ImageView
-                android:id="@+id/drawer_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:paddingBottom="@dimen/standard_half_padding" />
-
             <ProgressBar
                 android:id="@+id/account_quota_bar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/drawer_logo"
                 android:progress="25"
                 android:visibility="visible" />
 
@@ -55,9 +56,8 @@
                 android:id="@+id/account_quota_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/account_quota_bar"
                 android:text="@string/drawer_loading_quota" />
-        </RelativeLayout>
+        </LinearLayout>
 
     </com.google.android.material.navigation.NavigationView>
 
