--- a/owncloudApp/src/main/res/menu/file_actions_menu.xml
+++ b/owncloudApp/src/main/res/menu/file_actions_menu.xml
@@ -17,19 +17,22 @@
   You should have received a copy of the GNU General Public License
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/file_action_select_all"
         android:title="@string/actionbar_select_all"
-        app:showAsAction="never" />
+        android:showAsAction="never"
+        tools:ignore="AppCompatResource" />
 
     <item
         android:id="@+id/action_select_inverse"
         android:title="@string/actionbar_select_inverse"
         android:visible="true"
-        app:showAsAction="never" />
+        android:showAsAction="never"
+        tools:ignore="AppCompatResource" />
 
     <item
         android:id="@+id/action_share_file"
