--- a/owncloudApp/src/main/res/xml/preferences.xml
+++ b/owncloudApp/src/main/res/xml/preferences.xml
@@ -65,7 +65,7 @@
             android:title="@string/prefs_pattern" />
         <android.preference.CheckBoxPreference
             android:key="set_fingerprint"
-            android:title="@string/prefs_fingerprint" />
+            android:title="@string/prefs_biometric" />
         <android.preference.CheckBoxPreference
             android:key="touches_with_other_visible_windows"
             android:summary="@string/prefs_touches_with_other_visible_windows_summary"
