Scan document with OpenCV

--- a/owncloudApp/src/main/res/layout/upload_bottom_sheet_fragment.xml
+++ b/owncloudApp/src/main/res/layout/upload_bottom_sheet_fragment.xml
@@ -61,6 +61,27 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scan_document_upload_linear_layout"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:src="@drawable/ic_bottom_sheets_scanner"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="@string/scan_document"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
