--- a/owncloudApp/src/main/res/layout/list_fragment.xml
+++ b/owncloudApp/src/main/res/layout/list_fragment.xml
@@ -110,6 +110,16 @@
             fab:fab_title="" />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/primary_button_background_color"
+            fab:fab_colorPressed="@color/owncloud_blue"
+            fab:fab_icon="@drawable/ic_bottom_sheets_scanner_white"
+            fab:fab_size="mini"
+            fab:fab_title="" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_mkdir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
