biometric_api: Migrate SharedPref key

--- a/owncloudApp/src/main/res/xml/preferences.xml
+++ b/owncloudApp/src/main/res/xml/preferences.xml
@@ -64,7 +64,7 @@
             android:key="set_pattern"
             android:title="@string/prefs_pattern" />
         <android.preference.CheckBoxPreference
-            android:key="set_fingerprint"
+            android:key="set_biometric"
             android:title="@string/prefs_biometric" />
         <android.preference.CheckBoxPreference
             android:key="touches_with_other_visible_windows"
