--- a/owncloudApp/src/main/res/layout-land/account_setup.xml
+++ b/owncloudApp/src/main/res/layout-land/account_setup.xml
@@ -18,6 +18,7 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/login_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -28,14 +29,13 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/login_background_image"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dip"
         android:filterTouchesWhenObscured="true"
-        >
+        android:padding="8dip">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,8 +51,7 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/logo"
-                />
+                android:src="@drawable/logo" />
 
             <ScrollView
                 android:id="@+id/scroll"
@@ -79,7 +78,7 @@
                         android:contentDescription="@string/auth_check_server"
                         android:text="@string/auth_check_server"
                         android:theme="@style/Button.Secondary"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/instructions_message"
@@ -90,7 +89,7 @@
                         android:contentDescription="@string/auth_expired_basic_auth_toast"
                         android:text="@string/auth_expired_basic_auth_toast"
                         android:textColor="@color/login_text_color"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <FrameLayout
                         android:id="@+id/hostUrlFrame"
@@ -100,6 +99,7 @@
 
                         <EditText
                             android:id="@+id/hostUrlInput"
+                            style="@style/EditText.Authenticator"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="bottom"
@@ -107,10 +107,9 @@
                             android:hint="@string/auth_host_url"
                             android:inputType="textUri"
                             android:paddingEnd="55dp"
-                            style="@style/EditText.Authenticator"
                             android:theme="@style/EditText.Authenticator">
 
-                            <requestFocus/>
+                            <requestFocus />
                         </EditText>
 
                         <ImageButton
@@ -123,7 +122,7 @@
                             android:contentDescription="@string/auth_refresh_button"
                             android:padding="0dp"
                             android:scaleType="fitCenter"
-                            android:src="@drawable/ic_arrow_right"/>
+                            android:src="@drawable/ic_arrow_right" />
 
                         <ImageButton
                             android:id="@+id/embeddedRefreshButton"
@@ -136,8 +135,7 @@
                             android:padding="0dp"
                             android:scaleType="fitCenter"
                             android:src="@drawable/ic_action_refresh"
-                            android:visibility="gone"
-                            />
+                            android:visibility="gone" />
                     </FrameLayout>
 
                     <TextView
@@ -151,30 +149,51 @@
                         android:gravity="center_vertical"
                         android:minHeight="32dp"
                         android:text="@string/auth_testing_connection"
-                        android:textColor="@color/login_text_color"/>
+                        android:textColor="@color/login_text_color" />
 
-                    <EditText
-                        android:id="@+id/account_username"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/account_username_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="@string/auth_username"
-                        android:inputType="textNoSuggestions"
-                        style="@style/EditText.Authenticator"
-                        android:theme="@style/EditText.Authenticator"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:hintEnabled="false"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/white">
 
-                    <EditText
-                        android:id="@+id/account_password"
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/account_username"
+                            style="@style/EditText.Authenticator"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawablePadding="5dp"
+                            android:hint="@string/auth_username"
+                            android:inputType="textNoSuggestions"
+                            android:theme="@style/EditText.Authenticator">
+
+                        </com.google.android.material.textfield.TextInputEditText>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/account_password_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawablePadding="5dp"
-                        android:ems="10"
-                        android:hint="@string/auth_password"
-                        android:inputType="textPassword"
-                        style="@style/EditText.Authenticator"
-                        android:theme="@style/EditText.Authenticator"
-                        android:visibility="gone" />
+                        android:visibility="gone"
+                        app:hintEnabled="false"
+                        app:passwordToggleEnabled="false"
+                        app:passwordToggleTint="@color/white">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/account_password"
+                            style="@style/EditText.Authenticator"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawablePadding="5dp"
+                            android:hint="@string/auth_password"
+                            android:inputType="textPassword"
+                            android:theme="@style/EditText.Authenticator">
+
+                        </com.google.android.material.textfield.TextInputEditText>
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <TextView
                         android:id="@+id/auth_status_text"
@@ -209,7 +228,7 @@
                 android:contentDescription="@string/setup_btn_login"
                 android:text="@string/setup_btn_login"
                 android:theme="@style/Button.Authenticator"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -224,10 +243,10 @@
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/auth_register"
                     android:onClick="onRegisterClick"
-                    android:paddingBottom="5dp"
                     android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
                     android:text="@string/auth_register"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
