--- a/owncloudApp/src/main/res/layout-land/account_setup.xml
+++ b/owncloudApp/src/main/res/layout-land/account_setup.xml
@@ -19,6 +19,7 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -29,7 +30,8 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/login_background_image"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -63,7 +65,7 @@
 
                 <LinearLayout
                     android:id="@+id/LinearLayout1"
-                    android:layout_width="400dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="vertical"
@@ -107,7 +109,7 @@
                             android:hint="@string/auth_host_url"
                             android:inputType="textUri"
                             android:paddingEnd="55dp"
-                            android:theme="@style/EditText.Authenticator">
+                            android:theme="@style/Theme.ownCloud.Authenticator.EditText">
 
                             <requestFocus />
                         </EditText>
@@ -168,7 +170,7 @@
                             android:drawablePadding="5dp"
                             android:hint="@string/auth_username"
                             android:inputType="textNoSuggestions"
-                            android:theme="@style/EditText.Authenticator">
+                            android:theme="@style/Theme.ownCloud.Authenticator.EditText">
 
                         </com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -190,7 +192,7 @@
                             android:drawablePadding="5dp"
                             android:hint="@string/auth_password"
                             android:inputType="textPassword"
-                            android:theme="@style/EditText.Authenticator">
+                            android:theme="@style/Theme.ownCloud.Authenticator.EditText">
 
                         </com.google.android.material.textfield.TextInputEditText>
                     </com.google.android.material.textfield.TextInputLayout>
@@ -228,7 +230,8 @@
                 android:contentDescription="@string/setup_btn_login"
                 android:text="@string/setup_btn_login"
                 android:theme="@style/Button.Authenticator"
-                android:visibility="gone" />
+                android:visibility="gone"
+                tools:visibility="visible"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
