Handle login screen rotation

--- a/owncloudApp/src/main/res/layout-land/account_setup.xml
+++ b/owncloudApp/src/main/res/layout-land/account_setup.xml
@@ -97,7 +97,8 @@
                         android:id="@+id/hostUrlFrame"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="0dp">
+                        android:layout_marginBottom="0dp"
+                        android:focusable="true">
 
                         <EditText
                             android:id="@+id/hostUrlInput"
@@ -245,7 +246,6 @@
                     android:layout_gravity="center_horizontal"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/auth_register"
-                    android:onClick="onRegisterClick"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
                     android:text="@string/auth_register"
